ajuste final antes de notificaciones

--- a/Barrio1/AppShell.xaml
+++ b/Barrio1/AppShell.xaml
@@ -9,6 +9,12 @@
     Title="Barrio1">
 
     <ShellContent
+        Title="Login"
+        ContentTemplate="{DataTemplate Views:LoginView}"
+        Route="LoginView"/>
+
+
+    <ShellContent
         Title="Home"
         ContentTemplate="{DataTemplate Views:VentasListingPage}"
         Route="VentasListingPage"/>
