--- a/Barrio1/Views/VentasListingPage.xaml
+++ b/Barrio1/Views/VentasListingPage.xaml
@@ -22,19 +22,30 @@
         Margin="20"
         RowDefinitions="Auto,*"
         RowSpacing="10">
-        <Grid Grid.Row="0" ColumnDefinitions="*,*">
+        <Grid Grid.Row="0">
             <Label
                 Grid.Column="0"
                 FontAttributes="Bold"
                 FontSize="Title"
-                Text="Registro de Ventas" />
+                Text="Registro"
+                HorizontalOptions="Start"
+                />
+
             <Button
                 Grid.Column="1"
                 Background="#3ece8e"
+                Command="{Binding GetInventarioCommand}"
+                HorizontalOptions="CenterAndExpand"
+                Text="Inventario"
+                TextColor="Black" />
+
+            <Button
+                Grid.Column="2"
+                Background="#3ece8e"
                 Command="{Binding AddVentaCommand}"
                 HorizontalOptions="End"
-                Text="Añadir"
-                TextColor="#eff5f3" />
+                Text="Añadir venta"
+                TextColor="Black" />
         </Grid>
 
         <CollectionView Grid.Row="1" ItemsSource="{Binding Ventas}">
