--- a/Barrio1/Views/InventarioPage.xaml
+++ b/Barrio1/Views/InventarioPage.xaml
@@ -33,63 +33,48 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="130" />
                 <ColumnDefinition Width="130" />
+                <ColumnDefinition Width="130" />
             </Grid.ColumnDefinitions>
 
-            <Label Text="Botellas" Grid.Column="0" Grid.Row="0" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="Llanerita" Grid.Column="1" Grid.Row="0" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="" Grid.Column="0" Grid.Row="0" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="Botellas" Grid.Column="1" Grid.Row="0" HorizontalOptions="CenterAndExpand"/>
             <Label Text="Barriles" Grid.Column="2" Grid.Row="0" HorizontalOptions="CenterAndExpand"/>
 
-            <Label Text="{Binding StockLlane}" Grid.Column="0" Grid.Row="1" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="" Grid.Column="1" Grid.Row="1" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="Llanerita" Grid.Column="0" Grid.Row="1" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="{Binding StockLlane}" Grid.Column="1" Grid.Row="1" HorizontalOptions="CenterAndExpand"/>
             <Label Text="{Binding StockBaLlane}" Grid.Column="2" Grid.Row="1" HorizontalOptions="CenterAndExpand"/>
 
-            <Label Text="Botellas" Grid.Column="0" Grid.Row="2" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="Maleficio" Grid.Column="1" Grid.Row="2" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="Barriles" Grid.Column="2" Grid.Row="2" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="Maleficio" Grid.Column="0" Grid.Row="2" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="{Binding StockMale}" Grid.Column="1" Grid.Row="2" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="{Binding StockBaMale}" Grid.Column="2" Grid.Row="2" HorizontalOptions="CenterAndExpand"/>
 
-            <Label Text="{Binding StockMale}" Grid.Column="0" Grid.Row="3" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="" Grid.Column="1" Grid.Row="3" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="{Binding StockBaMale}" Grid.Column="2" Grid.Row="3" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="San juanera" Grid.Column="0" Grid.Row="3" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="{Binding StockSJ}" Grid.Column="1" Grid.Row="3" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="{Binding StockBaSJ}" Grid.Column="2" Grid.Row="3" HorizontalOptions="CenterAndExpand"/>
 
-            <Label Text="Botellas" Grid.Column="0" Grid.Row="4" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="San Juanera" Grid.Column="1" Grid.Row="4" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="Barriles" Grid.Column="2" Grid.Row="4" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="Barrio 21" Grid.Column="0" Grid.Row="4" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="{Binding StockB21}" Grid.Column="1" Grid.Row="4" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="{Binding StockBaB21}" Grid.Column="2" Grid.Row="4" HorizontalOptions="CenterAndExpand"/>
 
-            <Label Text="{Binding StockSJ}" Grid.Column="0" Grid.Row="5" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="" Grid.Column="1" Grid.Row="5" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="{Binding StockBaSJ}" Grid.Column="2" Grid.Row="5" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="Barranqueña" Grid.Column="0" Grid.Row="5" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="{Binding StockBarra}" Grid.Column="1" Grid.Row="5" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="{Binding StockBaBarra}" Grid.Column="2" Grid.Row="5" HorizontalOptions="CenterAndExpand"/>
 
-            <Label Text="Botellas" Grid.Column="0" Grid.Row="6" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="Barranqueña" Grid.Column="1" Grid.Row="6" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="Barriles" Grid.Column="2" Grid.Row="6" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="Toloachi" Grid.Column="0" Grid.Row="6" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="{Binding StockTolo}" Grid.Column="1" Grid.Row="6" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="{Binding StockBaTolo}" Grid.Column="2" Grid.Row="6" HorizontalOptions="CenterAndExpand"/>
 
-            <Label Text="{Binding StockBarra}" Grid.Column="0" Grid.Row="7" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="" Grid.Column="1" Grid.Row="7" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="{Binding StockBaBarra}" Grid.Column="2" Grid.Row="7" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="Genesis" Grid.Column="0" Grid.Row="7" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="{Binding StockGen}" Grid.Column="1" Grid.Row="7" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="{Binding StockBaGen}" Grid.Column="2" Grid.Row="7" HorizontalOptions="CenterAndExpand"/>
 
-            <Label Text="Botellas" Grid.Column="0" Grid.Row="8" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="Toloachi" Grid.Column="1" Grid.Row="8" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="Barriles" Grid.Column="2" Grid.Row="8" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="Celi" Grid.Column="0" Grid.Row="8" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="{Binding StockCeli}" Grid.Column="1" Grid.Row="8" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="{Binding StockBaCeli}" Grid.Column="2" Grid.Row="8" HorizontalOptions="CenterAndExpand"/>
 
-            <Label Text="{Binding StockTolo}" Grid.Column="0" Grid.Row="9" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="" Grid.Column="1" Grid.Row="9" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="{Binding StockBaTolo}" Grid.Column="2" Grid.Row="9" HorizontalOptions="CenterAndExpand"/>
-
-            <Label Text="Botellas" Grid.Column="0" Grid.Row="10" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="Genesis" Grid.Column="1" Grid.Row="10" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="Barriles" Grid.Column="2" Grid.Row="10" HorizontalOptions="CenterAndExpand"/>
-
-            <Label Text="{Binding StockGen}" Grid.Column="0" Grid.Row="11" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="" Grid.Column="1" Grid.Row="11" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="{Binding StockBaGen}" Grid.Column="2" Grid.Row="11" HorizontalOptions="CenterAndExpand"/>
-
-            <Label Text="Botellas" Grid.Column="0" Grid.Row="12" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="Guasanta" Grid.Column="1" Grid.Row="12" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="Barriles" Grid.Column="2" Grid.Row="12" HorizontalOptions="CenterAndExpand"/>
-
-            <Label Text="{Binding StockGuasanta}" Grid.Column="0" Grid.Row="13" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="" Grid.Column="1" Grid.Row="13" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="{Binding StockBaGuasanta}" Grid.Column="2" Grid.Row="13" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="Guasanta" Grid.Column="0" Grid.Row="9" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="{Binding StockGuasanta}" Grid.Column="1" Grid.Row="9" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="{Binding StockBaGuasanta}" Grid.Column="2" Grid.Row="9" HorizontalOptions="CenterAndExpand"/>
         </Grid>
     </ScrollView>
 </ContentPage>
